--- a/examples/h3/package.json
+++ b/examples/h3/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "h3": "2.0.0-beta.4"
+  },
   "author": "",
   "license": "ISC",
   "description": ""
