--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,6 +37,7 @@
     "@vercel/blob": "1.0.2",
     "@vercel/build-utils": "12.1.0",
     "@vercel/detect-agent": "workspace:*",
+    "@vercel/fetch-export": "0.1.0",
     "@vercel/fun": "1.1.6",
     "@vercel/go": "3.2.3",
     "@vercel/express": "0.0.22",
