--- a/examples/fetch-export/package.json
+++ b/examples/fetch-export/package.json
@@ -1,7 +1,7 @@
 {
   "name": "01-basic",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "api.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
