--- a/packages/build-utils/package.json
+++ b/packages/build-utils/package.json
@@ -18,8 +18,28 @@
     "vitest-e2e": "glob --absolute 'test/integration*.test.ts'",
     "type-check": "tsc --noEmit"
   },
-  "devDependencies": {
+  "dependencies": {
     "@iarna/toml": "2.2.3",
+    "@vercel/error-utils": "2.0.3",
+    "@vercel/routing-utils": "5.1.1",
+    "aggregate-error": "3.0.1",
+    "async-retry": "1.2.3",
+    "async-sema": "2.1.4",
+    "cross-spawn": "6.0.5",
+    "end-of-stream": "1.4.1",
+    "fs-extra": "10.0.0",
+    "glob": "8.0.3",
+    "ignore": "4.0.6",
+    "into-stream": "5.0.0",
+    "js-yaml": "3.13.1",
+    "json5": "2.2.3",
+    "minimatch": "3.1.2",
+    "multistream": "2.1.1",
+    "node-fetch": "2.6.7",
+    "semver": "6.3.1",
+    "yazl": "2.5.1"
+  },
+  "devDependencies": {
     "@types/async-retry": "^1.2.1",
     "@types/cross-spawn": "6.0.0",
     "@types/end-of-stream": "^1.4.0",
@@ -34,28 +54,10 @@
     "@types/node-fetch": "^2.1.6",
     "@types/semver": "6.0.0",
     "@types/yazl": "2.4.2",
-    "@vercel/error-utils": "2.0.3",
-    "@vercel/routing-utils": "5.1.1",
-    "aggregate-error": "3.0.1",
-    "async-retry": "1.2.3",
-    "async-sema": "2.1.4",
-    "cross-spawn": "6.0.5",
-    "end-of-stream": "1.4.1",
     "execa": "3.2.0",
-    "fs-extra": "10.0.0",
-    "glob": "8.0.3",
-    "ignore": "4.0.6",
-    "into-stream": "5.0.0",
     "jest-junit": "16.0.0",
-    "js-yaml": "3.13.1",
-    "minimatch": "3.1.2",
     "ms": "2.1.3",
-    "multistream": "2.1.1",
-    "node-fetch": "2.6.7",
-    "semver": "6.3.1",
     "typescript": "4.9.5",
-    "yazl": "2.5.1",
-    "vitest": "2.0.1",
-    "json5": "2.2.3"
+    "vitest": "2.0.1"
   }
 }
