--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,9 +17,9 @@
     "test-e2e": "rimraf test/fixtures/integration && pnpm test test/integration-1.test.ts test/integration-2.test.ts test/integration-3.test.ts",
     "test-dev": "pnpm test test/dev/",
     "coverage": "codecov",
-    "build": "node scripts/build.mjs",
+    "build": "bun run scripts/build.mjs",
     "dev": "echo \"'pnpm dev [command]' has been removed. Use 'pnpm vercel [command]' instead.\" && exit 1",
-    "vercel": "ts-node ./src/index.ts",
+    "vercel": "bun run ./src/index.ts",
     "vc": "pnpm vercel",
     "type-check": "tsc --noEmit"
   },
@@ -174,7 +174,6 @@
     "tldts": "6.1.47",
     "tmp-promise": "1.0.3",
     "tree-kill": "1.2.2",
-    "ts-node": "10.9.1",
     "typescript": "4.9.5",
     "utility-types": "2.1.0",
     "vite": "^5.1.6",
@@ -182,6 +181,7 @@
     "which": "3.0.0",
     "write-json-file": "2.2.0",
     "xdg-app-paths": "5.1.0",
-    "yauzl-promise": "2.1.3"
+    "yauzl-promise": "2.1.3",
+    "bun": "1.2.23"
   }
 }
