--- a/packages/cervel/package.json
+++ b/packages/cervel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vercel/serve",
+  "name": "cervel",
   "version": "0.0.1",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vercel/vercel.git",
-    "directory": "packages/serve"
+    "directory": "packages/cervel"
   },
   "scripts": {
     "build": "node ../../utils/build-builder.mjs",
@@ -22,11 +22,13 @@
     "dist"
   ],
   "dependencies": {
-    "@vercel/build-utils": "12.1.0",
-    "fs-extra": "11.1.0",
     "srvx": "0.8.9",
     "tsx": "4.19.2",
-    "execa": "3.2.0"
+    "execa": "3.2.0",
+    "rolldown": "1.0.0-beta.35"
+  },
+  "peerDependencies": {
+    "typescript": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "@types/node": "14.18.33",
