--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -30,7 +30,8 @@
     "rolldown": "1.0.0-beta.35",
     "ts-morph": "12.0.0",
     "zod": "3.22.4",
-    "@vercel/node": "5.3.24"
+    "@vercel/node": "5.3.24",
+    "cervel": "workspace:*"
   },
   "devDependencies": {
     "@types/fs-extra": "11",
