fix(oidc): add `"react-native"` as export condition
See https://github.com/vercel/ai/issues/9219#issuecomment-3379367221

--- a/packages/oidc/package.json
+++ b/packages/oidc/package.json
@@ -11,6 +11,7 @@
   "exports": {
     ".": {
       "browser": "./dist/index-browser.js",
+      "react-native": "./dist/index-browser.js",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
