--- a/packages/cervel/package.json
+++ b/packages/cervel/package.json
@@ -2,7 +2,6 @@
   "name": "cervel",
   "version": "0.0.1",
   "license": "Apache-2.0",
-  "main": "./dist/index.js",
   "homepage": "https://vercel.com/docs",
   "publishConfig": {
     "access": "public"
@@ -12,15 +11,24 @@
     "url": "https://github.com/vercel/vercel.git",
     "directory": "packages/cervel"
   },
-  "scripts": {
-    "build": "node ../../utils/build-builder.mjs",
-    "vitest-run": "vitest -c ../../vitest.config.mts",
-    "vitest-unit": "glob --absolute 'test/unit/**/*.test.ts' 'test/unit/**/*.test.mts'",
-    "type-check": "tsc --noEmit"
+  "sideEffects": false,
+  "type": "module",
+  "exports": {
+    "./cli": "./dist/cli.js",
+    ".": "./dist/index.js"
+  },
+  "types": "./dist/index.d.ts",
+  "bin": {
+    "cervel": "./bin/cervel.mjs"
   },
   "files": [
+    "bin",
     "dist"
   ],
+  "scripts": {
+    "build": "tsdown",
+    "type-check": "tsc --noEmit"
+  },
   "dependencies": {
     "srvx": "0.8.9",
     "tsx": "4.19.2",
@@ -31,7 +39,7 @@
     "typescript": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "14.18.33",
+    "@types/node": "24.7.0",
     "vitest": "^2.0.1",
     "typescript": "4.9.5"
   }
