Cleanup, add cli to cervel-beta

--- a/packages/cervel/tsconfig.json
+++ b/packages/cervel/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2022",
     "outDir": "./dist",
     "types": ["node", "jest"]
   },
