--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -31,7 +31,7 @@
     "ts-morph": "12.0.0",
     "zod": "3.22.4",
     "@vercel/node": "5.3.24",
-    "cervel": "workspace:*"
+    "cervel-beta": "workspace:*"
   },
   "devDependencies": {
     "@types/fs-extra": "11",
