--- a/packages/cervel/package.json
+++ b/packages/cervel/package.json
@@ -30,17 +30,18 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "srvx": "0.8.9",
-    "tsx": "4.19.2",
     "execa": "3.2.0",
-    "rolldown": "1.0.0-beta.35"
+    "rolldown": "1.0.0-beta.35",
+    "srvx": "0.8.9",
+    "tsdown": "0.15.6",
+    "tsx": "4.19.2"
   },
   "peerDependencies": {
     "typescript": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "@types/node": "24.7.0",
-    "vitest": "^2.0.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vitest": "^2.0.1"
   }
 }
