--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -23,7 +23,8 @@
     "dist"
   ],
   "dependencies": {
-    "@vercel/nft": "0.30.1"
+    "@vercel/nft": "0.30.1",
+    "minimatch": "3.1.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.19",
@@ -34,6 +35,7 @@
     "@types/fs-extra": "8.0.0",
     "@types/glob": "7.1.3",
     "@types/jest": "29.5.5",
+    "@types/minimatch": "3.0.3",
     "@types/next-server": "8.0.0",
     "@types/node": "14.18.33",
     "@types/resolve-from": "5.0.1",
