--- a/packages/cli-auth/package.json
+++ b/packages/cli-auth/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@vercel/cli-auth",
   "description": "Used by Vercel's CLIs to handle authentication",
-  "version": "0.0.1",
+  "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "private": false,
   "files": [
     "*.js",
