First pass at using loader instead of node_modules hack

--- a/packages/backends/package.json
+++ b/packages/backends/package.json
@@ -20,7 +20,10 @@
   },
   "files": [
     "dist",
-    "edge-entry.js"
+    "express-loader.js",
+    "express-loader.mjs",
+    "express-loader-register.mjs",
+    "express-loader-hooks.mjs"
   ],
   "dependencies": {
     "@vercel/nft": "0.30.1",
