--- a/packages/backends/tsconfig.json
+++ b/packages/backends/tsconfig.json
@@ -4,6 +4,6 @@
     "types": ["node", "jest"]
   },
   "extends": "../../tsconfig.base.json",
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "express-loader.js"],
   "exclude": ["node_modules"]
 }
