--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,7 @@
 # https://prettier.io/docs/en/ignore.html
 
+packages/next/adapter.js
+
 # ignore these files with an intentional syntax error
 packages/cli/test/dev/fixtures/edge-function-error/api/edge-error-syntax.js
 packages/cli/test/fixtures/unit/commands/build/node-error/api/typescript.ts
