Fix cli-auth publishing (#14103)
Another release was failed because of cli-auth:
https://github.com/vercel/vercel/actions/runs/18510810395/job/52751009967

This time, the problem is a missing `repository.url` from the package
json. This adds the repository field and reverts the 48.3 release so
those changes will be properly released next time.

--- a/packages/cli-auth/package.json
+++ b/packages/cli-auth/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@vercel/cli-auth",
   "description": "Used by Vercel's CLIs to handle authentication",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vercel/vercel.git",
+    "directory": "packages/cli-auth"
   },
   "private": false,
   "files": [
