--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,6 @@
 # https://prettier.io/docs/en/ignore.html
 
-packages/next/adapter.js
+packages/next/adapter/**
 
 # ignore these files with an intentional syntax error
 packages/cli/test/dev/fixtures/edge-function-error/api/edge-error-syntax.js
