Get instance capturing working across cjs/esm for express and hono

--- a/packages/backends/tsconfig.json
+++ b/packages/backends/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "target": "ES2022"
   },
   "extends": "../../tsconfig.base.json",
   "include": ["src/**/*", "express-loader.js"],
