--- a/packages/backends/package.json
+++ b/packages/backends/package.json
@@ -4,6 +4,7 @@
   "license": "Apache-2.0",
   "main": "./dist/index.js",
   "homepage": "https://vercel.com/docs",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -24,25 +25,34 @@
     "express-loader.mjs",
     "express-loader-register.mjs",
     "express-loader-hooks.mjs",
-    "express-introspection-source.js"
+    "express-introspection-source.js",
+    "hono-loader.js",
+    "hono-loader-hooks.js",
+    "universal-loader.js",
+    "universal-loader-cjs.js",
+    "universal-loader-esm.mjs",
+    "universal-loader-hooks.mjs"
   ],
   "dependencies": {
+    "@vercel/cervel-beta": "workspace:*",
     "@vercel/nft": "0.30.1",
+    "@vercel/node": "5.3.26",
     "@vercel/static-config": "3.1.2",
     "fs-extra": "11.1.0",
     "path-to-regexp": "8.3.0",
     "rolldown": "1.0.0-beta.35",
     "ts-morph": "12.0.0",
-    "zod": "3.22.4",
-    "@vercel/cervel-beta": "workspace:*",
-    "@vercel/node": "5.3.26"
+    "tsdown": "0.15.6",
+    "zod": "3.22.4"
   },
   "devDependencies": {
+    "@types/express": "5.0.3",
     "@types/fs-extra": "11",
     "@types/jest": "27.5.1",
-    "@types/node": "14.18.33",
+    "@types/node": "22",
     "@vercel/build-utils": "12.1.2",
     "execa": "3.2.0",
+    "hono": "4.10.1",
     "jest-junit": "16.0.0",
     "vite": "^5.1.6",
     "vitest": "^2.0.1"
