--- a/packages/backends/package.json
+++ b/packages/backends/package.json
@@ -41,7 +41,7 @@
     "universal-loader-hooks.mjs"
   ],
   "dependencies": {
-    "@vercel/cervel-beta": "workspace:*",
+    "@vercel/cervel": "workspace:*",
     "@vercel/nft": "0.30.1",
     "@vercel/node": "5.3.26",
     "@vercel/static-config": "3.1.2",
