--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -30,7 +30,7 @@
     "rolldown": "1.0.0-beta.35",
     "ts-morph": "12.0.0",
     "zod": "3.22.4",
-    "@vercel/cervel-beta": "workspace:*",
+    "@vercel/cervel": "workspace:*",
     "@vercel/node": "5.5.0"
   },
   "devDependencies": {
