Add @vercel/backends package to consolidate backend framework builders (#14065)
This introduces a new package (codename: `@vercel/cervel`) which can be
used for generic node backends to both build and serve apps. It's in
this monorepo, but isn't specific to any Vercel tooling, and it might
make sense to move to it's own repo.

- Wraps `srvx` with the `tsx` loader
- Builds with `rolldown`
- Shares the same entrypoint detection logic that we're using for the
backend presets.

The idea here would be that we'd update express/hono/etc framework
presets with `build` and `dev` commands:

```
"dev": "cervel",
"build": "cervel build index.ts"
```

While internally, if there's no build script we supply `cervel build`
under the hood (which will autodetect an entrypoint if not supplied).

---

This work is coming up during the o11y POC because we have exhausted how
far we can get with using the `@vercel/node` builder. Essentially, the
node builder is using version 3 of the build output API, and we need to
use version 2.

All of this is behind the `VERCEL_EXPERIMENTAL_BACKENDS=1` env var so
should be safe to move forward with.

---------

Co-authored-by: vercel[bot] <35613825+vercel[bot]@users.noreply.github.com>

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,7 +19,7 @@
     "coverage": "codecov",
     "build": "node scripts/build.mjs",
     "dev": "echo \"'pnpm dev [command]' has been removed. Use 'pnpm vercel [command]' instead.\" && exit 1",
-    "vercel": "ts-node ./src/index.ts",
+    "vercel": "pnpm build && node ./dist/vc.js",
     "vc": "pnpm vercel",
     "type-check": "tsc --noEmit"
   },
@@ -39,6 +39,7 @@
     "@vercel/detect-agent": "workspace:*",
     "@vercel/fun": "1.1.6",
     "@vercel/go": "3.2.3",
+    "@vercel/backends": "workspace:*",
     "@vercel/express": "0.1.0",
     "@vercel/hono": "0.2.0",
     "@vercel/h3": "0.1.7",
