--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,6 +41,7 @@
     "@vercel/go": "3.2.3",
     "@vercel/backends": "workspace:*",
     "@vercel/express": "0.1.5",
+    "@vercel/fastify": "0.1.5",
     "@vercel/hono": "0.2.5",
     "@vercel/h3": "0.1.11",
     "@vercel/hydrogen": "1.3.0",
