--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -40,7 +40,7 @@
     "path-to-regexp-updated": "npm:path-to-regexp@6.3.0",
     "path-to-regexp": "6.1.0",
     "ts-morph": "12.0.0",
-    "ts-node": "10.9.1",
+    "tsx": "4.19.2",
     "typescript": "5.9.3",
     "undici": "5.28.4"
   },
