Pull introspection module out of backends for external use (#14210)
Nitro may experiment with using the introspection stuff with their v3
`server.ts` entry, so pullling it out of `backends` package.

This now moves introspection tests as well, and unit tests in `backends`
are more focused on making sure the lambdas they create actually run.

--- a/packages/introspection/package.json
+++ b/packages/introspection/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@vercel/backends",
-  "version": "0.0.5",
+  "name": "@vercel/introspection",
+  "version": "0.0.1",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
   "homepage": "https://vercel.com/docs",
@@ -9,12 +9,15 @@
     "access": "public"
   },
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.js",
+    "./loaders/cjs": "./dist/loaders/cjs.js",
+    "./loaders/esm": "./dist/loaders/esm.js",
+    "./loaders/hooks": "./dist/loaders/hooks.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/vercel/vercel.git",
-    "directory": "packages/backends"
+    "directory": "packages/introspection"
   },
   "scripts": {
     "build": "tsdown",
@@ -26,19 +29,19 @@
     "dist"
   ],
   "dependencies": {
-    "@vercel/cervel": "workspace:*",
-    "@vercel/nft": "0.30.1",
-    "@vercel/static-config": "3.1.2",
-    "@vercel/introspection": "workspace:*",
-    "fs-extra": "11.1.0",
-    "rolldown": "1.0.0-beta.35"
+    "path-to-regexp": "8.3.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/express": "5.0.3",
     "@types/fs-extra": "11",
     "@types/jest": "27.5.1",
+    "@vercel/cervel": "workspace:*",
+    "@vercel/static-config": "3.1.2",
+    "@vercel/nft": "0.30.1",
     "@types/node": "22",
-    "@vercel/build-utils": "13.0.0",
+    "fs-extra": "11.1.0",
+    "@vercel/build-utils": "12.2.4",
     "execa": "3.2.0",
     "hono": "4.10.1",
     "jest-junit": "16.0.0",
