--- a/examples/tanstack-start/package.json
+++ b/examples/tanstack-start/package.json
@@ -17,7 +17,7 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "lucide-react": "^0.544.0",
-    "nitro": "3.0.1-alpha.0",
+    "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.0.6",
