--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,17 +34,17 @@
     "node": ">= 18"
   },
   "dependencies": {
+    "@vercel/backends": "workspace:*",
     "@vercel/blob": "1.0.2",
     "@vercel/build-utils": "13.0.0",
     "@vercel/detect-agent": "workspace:*",
-    "@vercel/fun": "1.1.6",
-    "@vercel/go": "3.2.3",
-    "@vercel/backends": "workspace:*",
     "@vercel/elysia": "0.1.3",
     "@vercel/express": "0.1.6",
     "@vercel/fastify": "0.1.6",
-    "@vercel/hono": "0.2.6",
+    "@vercel/fun": "1.1.6",
+    "@vercel/go": "3.2.3",
     "@vercel/h3": "0.1.12",
+    "@vercel/hono": "0.2.6",
     "@vercel/hydrogen": "1.3.1",
     "@vercel/next": "4.15.2",
     "@vercel/node": "5.5.5",
@@ -54,6 +54,7 @@
     "@vercel/ruby": "2.2.1",
     "@vercel/static-build": "2.8.5",
     "chokidar": "4.0.0",
+    "esbuild": "0.25.12",
     "jose": "5.9.6"
   },
   "devDependencies": {
