--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -6,7 +6,11 @@
     "noUnusedParameters": false,
     "outDir": "./dist",
     "resolveJsonModule": true,
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "esbuild": ["node_modules/esbuild"]
+    }
   },
   "extends": "../../tsconfig.base.json",
   "include": ["./types", "src/**/*", "test/**/*"],
