--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -42,6 +42,7 @@
     "ts-morph": "12.0.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.5",
+    "typescript5": "npm:typescript@5.9.3",
     "undici": "5.28.4"
   },
   "devDependencies": {
