--- a/packages/backends/package.json
+++ b/packages/backends/package.json
@@ -2,14 +2,15 @@
   "name": "@vercel/backends",
   "version": "0.0.5",
   "license": "Apache-2.0",
-  "main": "./dist/index.js",
+  "main": "./dist/index.mjs",
   "homepage": "https://vercel.com/docs",
   "type": "module",
   "publishConfig": {
     "access": "public"
   },
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.mjs",
+    "./package.json": "./package.json"
   },
   "repository": {
     "type": "git",
@@ -42,8 +43,10 @@
     "execa": "3.2.0",
     "hono": "4.10.1",
     "jest-junit": "16.0.0",
-    "tsdown": "0.15.6",
+    "tsdown": "0.16.3",
     "vite": "^5.1.6",
     "vitest": "^2.0.1"
-  }
+  },
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts"
 }
