--- a/packages/cervel/package.json
+++ b/packages/cervel/package.json
@@ -14,10 +14,12 @@
   "sideEffects": false,
   "type": "module",
   "exports": {
-    "./cli": "./dist/cli.js",
-    ".": "./dist/index.js"
+    "./cli": "./dist/cli.mjs",
+    ".": {
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.mts"
+    }
   },
-  "types": "./dist/index.d.ts",
   "bin": {
     "cervel": "./bin/cervel.mjs"
   },
@@ -41,7 +43,7 @@
   "devDependencies": {
     "@types/node": "24.7.0",
     "typescript": "4.9.5",
-    "tsdown": "0.15.6",
+    "tsdown": "0.16.3",
     "vitest": "^2.0.1"
   }
 }
