--- a/packages/introspection/package.json
+++ b/packages/introspection/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "homepage": "https://vercel.com/docs",
   "type": "module",
   "publishConfig": {
