--- a/packages/introspection/package.json
+++ b/packages/introspection/package.json
@@ -2,14 +2,16 @@
   "name": "@vercel/introspection",
   "version": "0.0.2",
   "license": "Apache-2.0",
-  "main": "./dist/index.js",
   "homepage": "https://vercel.com/docs",
   "type": "module",
   "publishConfig": {
     "access": "public"
   },
   "exports": {
-    ".": "./dist/index.js",
+    ".": {
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.mts"
+    },
     "./loaders/cjs": "./dist/loaders/cjs.js",
     "./loaders/esm": "./dist/loaders/esm.js",
     "./loaders/hooks": "./dist/loaders/hooks.js"
@@ -45,7 +47,7 @@
     "execa": "3.2.0",
     "hono": "4.10.1",
     "jest-junit": "16.0.0",
-    "tsdown": "0.15.6",
+    "tsdown": "0.16.3",
     "vite": "^5.1.6",
     "vitest": "^2.0.1"
   }
