--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -76,7 +76,6 @@
     "@types/dotenv": "6.1.1",
     "@types/escape-html": "0.0.20",
     "@types/fs-extra": "9.0.13",
-    "@types/http-proxy": "1.16.2",
     "@types/ini": "1.3.31",
     "@types/jest": "27.4.1",
     "@types/jest-expect-message": "1.0.3",
@@ -138,7 +137,7 @@
     "fs-extra": "10.0.0",
     "get-port": "5.1.1",
     "git-last-commit": "1.0.1",
-    "http-proxy": "1.18.1",
+    "http-proxy-node16": "1.0.6",
     "ini": "3.0.0",
     "is-docker": "2.2.1",
     "is-port-reachable": "3.1.0",
