--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -2,6 +2,9 @@
 name = "vercel_runtime"
 version = "5.0.0-alpha.1"
 edition = "2024"
+description = "Vercel Runtime for Rust"
+license = "Apache-2.0"
+repository = "https://github.com/vercel/vercel"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
