--- a/packages/introspection/package.json
+++ b/packages/introspection/package.json
@@ -25,7 +25,8 @@
     "build": "tsdown",
     "vitest-run": "vitest -c ../../vitest.config.mts",
     "vitest-unit": "glob --absolute 'test/unit/**/*.test.ts' 'test/unit/**/*.test.mts'",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "dev": "npx onchange . -e dist -e .turbo -e test/fixtures -- pnpm run build"
   },
   "files": [
     "dist"
@@ -38,13 +39,15 @@
     "@types/express": "5.0.3",
     "@types/fs-extra": "11",
     "@types/jest": "27.5.1",
-    "@vercel/cervel": "workspace:*",
-    "@vercel/static-config": "3.1.2",
-    "@vercel/nft": "0.30.1",
     "@types/node": "22",
-    "fs-extra": "11.1.0",
     "@vercel/build-utils": "12.2.4",
+    "@vercel/cervel": "workspace:*",
+    "@vercel/nft": "0.30.1",
+    "@vercel/static-config": "3.1.2",
     "execa": "3.2.0",
+    "fastify": "5.6.2",
+    "find-my-way": "9.3.0",
+    "fs-extra": "11.1.0",
     "hono": "4.10.1",
     "jest-junit": "16.0.0",
     "tsdown": "0.16.3",
