--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vercel",
-  "version": "48.10.2",
+  "version": "48.10.3",
   "preferGlobal": true,
   "license": "Apache-2.0",
   "description": "The command-line interface for Vercel",
@@ -34,17 +34,17 @@
     "node": ">= 18"
   },
   "dependencies": {
+    "@vercel/backends": "workspace:*",
     "@vercel/blob": "1.0.2",
     "@vercel/build-utils": "13.0.1",
     "@vercel/detect-agent": "workspace:*",
-    "@vercel/fun": "1.1.6",
-    "@vercel/go": "3.2.3",
-    "@vercel/backends": "workspace:*",
     "@vercel/elysia": "0.1.4",
-    "@vercel/express": "0.1.7",
+    "@vercel/express": "0.1.8",
     "@vercel/fastify": "0.1.7",
-    "@vercel/hono": "0.2.7",
+    "@vercel/fun": "1.2.0",
+    "@vercel/go": "3.2.3",
     "@vercel/h3": "0.1.13",
+    "@vercel/hono": "0.2.7",
     "@vercel/hydrogen": "1.3.2",
     "@vercel/next": "4.15.3",
     "@vercel/node": "5.5.6",
@@ -52,8 +52,6 @@
     "@vercel/redwood": "2.4.2",
     "@vercel/remix-builder": "5.5.2",
     "@vercel/ruby": "2.2.2",
-    "@vercel/fs-detectors": "workspace:*",
-    "@vercel/rust": "workspace:*",
     "@vercel/static-build": "2.8.6",
     "chokidar": "4.0.0",
     "jose": "5.9.6"
@@ -103,10 +101,10 @@
     "@vercel-internals/constants": "workspace:*",
     "@vercel-internals/get-package-json": "workspace:*",
     "@vercel-internals/types": "workspace:*",
-    "@vercel/client": "17.2.4",
+    "@vercel/client": "17.2.5",
     "@vercel/error-utils": "2.0.3",
     "@vercel/frameworks": "3.15.3",
-    "@vercel/fs-detectors": "workspace:*",
+    "@vercel/fs-detectors": "5.7.6",
     "@vercel/routing-utils": "5.2.2",
     "@vitest/expect": "2.1.3",
     "ajv": "6.12.3",
