--- a/examples/xmcp/package.json
+++ b/examples/xmcp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xmcp-example",
+  "name": "xmcp",
   "version": "0.1.0",
   "description": "An xmcp application with tool syntax",
   "engines": {
@@ -11,10 +11,7 @@
     "start": "node dist/http.js"
   },
   "dependencies": {
-    "xmcp": "0.1.10",
+    "xmcp": "0.5.0",
     "zod": "3.24.4"
-  },
-  "devDependencies": {
-    "swc-loader": "^0.2.6"
   }
 }
