--- a/packages/rust/crates/vercel_runtime/Cargo.toml
+++ b/packages/rust/crates/vercel_runtime/Cargo.toml
@@ -6,7 +6,7 @@ description = "Vercel Runtime for Rust"
 license = "Apache-2.0"
 repository = "https://github.com/vercel/vercel"
 homepage = "https://vercel.com/docs/runtimes"
-keywords = ["vercel", "runtime", "serverless", "rust", "fluid", "compute"]
+keywords = ["vercel", "runtime", "serverless", "rust", "fluid"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
