--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,9 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": [
     "@svitejs/changesets-changelog-github-compact",
-    { "repo": "vercel/vercel" }
+    {
+      "repo": "vercel/vercel"
+    }
   ],
   "commit": false,
   "fixed": [],
@@ -13,6 +15,9 @@
   "ignore": [
     "api",
     "examples",
-    "@vercel-internals/*"
+    "@vercel-internals/*",
+    "packages/rust/crates/*",
+    "packages/rust/**/Cargo.toml",
+    "packages/rust/**/Cargo.lock"
   ]
 }
