lift crates to root because of changeset restriction

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -15,9 +15,6 @@
   "ignore": [
     "api",
     "examples",
-    "@vercel-internals/*",
-    "packages/rust/crates/*",
-    "packages/rust/**/Cargo.toml",
-    "packages/rust/**/Cargo.lock"
+    "@vercel-internals/*"
   ]
 }
