--- a/.github/workflows/release-crates.yml
+++ b/.github/workflows/release-crates.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches: [main]
     paths:
-      - "crates/vercel_runtime/**"
-      - "Cargo.toml"
-      - "Cargo.lock"
+      - 'crates/vercel_runtime/**'
+      - 'Cargo.toml'
+      - 'Cargo.lock'
   workflow_dispatch:
 jobs:
   publish:
