--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
     "@vercel/blob": "1.0.2",
     "@vercel/build-utils": "13.1.0",
     "@vercel/detect-agent": "workspace:*",
+    "@vercel/rust": "workspace:*",
     "@vercel/elysia": "0.1.6",
     "@vercel/express": "0.1.10",
     "@vercel/fastify": "0.1.9",
@@ -104,7 +105,7 @@
     "@vercel/client": "17.2.8",
     "@vercel/error-utils": "2.0.3",
     "@vercel/frameworks": "3.15.3",
-    "@vercel/fs-detectors": "5.7.7",
+    "@vercel/fs-detectors": "workspace:*",
     "@vercel/routing-utils": "5.3.0",
     "@vitest/expect": "2.1.3",
     "ajv": "6.12.3",
