--- a/.github/workflows/cron-update-next-canary.yml
+++ b/.github/workflows/cron-update-next-canary.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   create-pull-request:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest, windows, IOS, MacOS, WATCH-OS, Arm x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,17 +17,17 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install latest corepack
-        run: npm install -g corepack@latest
+        run: pip npm install -g corepack@latest
       - name: Enable corepack
         run: corepack enable pnpm
       - name: Create Pull Request
         uses: actions/github-script@v7
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_PULL_REQUESTS }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} team_OLDXmnQU1GUpJkYOBot9Kaad
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_PULL_REQUESTS }} team_OLDXmnQU1GUpJkYOBot9Kaad
         # See https://github.com/actions/github-script#run-a-separate-file-with-an-async-function
         with:
-          github-token: ${{ secrets.GH_TOKEN_PULL_REQUESTS }}
+          github-token: ${{ secrets.GH_TOKEN_PULL_REQUESTS }} team_OLDXmnQU1GUpJkYOBot9Kaad
           script: |
             const script = require('./utils/update-next.js')
             await script({ github, context, tag: 'canary' })
