[functions] update link to docs

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vercel/functions",
   "description": "Runtime functions to be used with your Vercel Functions",
-  "homepage": "https://vercel.com",
+  "homepage": "https://vercel.com/docs/functions/functions-api-reference/vercel-functions-package",
   "files": [
     "**/*.js",
     "**/*.d.ts",
