--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vercel",
-  "version": "48.10.7",
+  "version": "48.10.14",
   "preferGlobal": true,
   "license": "Apache-2.0",
   "description": "The command-line interface for Vercel",
@@ -14,7 +14,7 @@
     "test": "jest --reporters=default --reporters=jest-junit --env node --verbose --bail",
     "vitest-run": "vitest --config ./vitest.config.mts",
     "vitest-unit": "jest test/unit/ --listTests",
-    "test-e2e-node-all-versions": "rimraf test/fixtures/integration && pnpm test test/integration-1.test.ts test/integration-2.test.ts test/integration-3.test.ts",
+    "test-e2e-node-all-versions": "rimraf test/fixtures/integration && pnpm test test/integration-1.test.ts test/integration-2.test.ts test/integration-3.test.ts test/integration-link-env-pull.test.ts",
     "test-dev": "pnpm test test/dev/",
     "coverage": "codecov",
     "build": "node scripts/build.mjs",
@@ -36,24 +36,23 @@
   "dependencies": {
     "@vercel/backends": "workspace:*",
     "@vercel/blob": "1.0.2",
-    "@vercel/build-utils": "13.1.0",
+    "@vercel/build-utils": "13.2.0",
     "@vercel/detect-agent": "workspace:*",
-    "@vercel/rust": "workspace:*",
-    "@vercel/elysia": "0.1.6",
-    "@vercel/express": "0.1.10",
-    "@vercel/fastify": "0.1.9",
+    "@vercel/elysia": "0.1.10",
+    "@vercel/express": "0.1.15",
+    "@vercel/fastify": "0.1.13",
     "@vercel/fun": "1.2.0",
     "@vercel/go": "3.2.3",
-    "@vercel/h3": "0.1.15",
-    "@vercel/hono": "0.2.9",
+    "@vercel/h3": "0.1.19",
+    "@vercel/hono": "0.2.13",
     "@vercel/hydrogen": "1.3.2",
-    "@vercel/next": "4.15.3",
-    "@vercel/node": "5.5.8",
-    "@vercel/python": "6.0.6",
-    "@vercel/redwood": "2.4.2",
-    "@vercel/remix-builder": "5.5.2",
+    "@vercel/next": "4.15.5",
+    "@vercel/node": "5.5.12",
+    "@vercel/python": "6.0.8",
+    "@vercel/redwood": "2.4.3",
+    "@vercel/remix-builder": "5.5.3",
     "@vercel/ruby": "2.2.2",
-    "@vercel/static-build": "2.8.8",
+    "@vercel/static-build": "2.8.11",
     "chokidar": "4.0.0",
     "jose": "5.9.6"
   },
@@ -102,10 +101,10 @@
     "@vercel-internals/constants": "workspace:*",
     "@vercel-internals/get-package-json": "workspace:*",
     "@vercel-internals/types": "workspace:*",
-    "@vercel/client": "17.2.8",
+    "@vercel/client": "17.2.11",
     "@vercel/error-utils": "2.0.3",
     "@vercel/frameworks": "3.15.3",
-    "@vercel/fs-detectors": "workspace:*",
+    "@vercel/fs-detectors": "5.7.7",
     "@vercel/routing-utils": "5.3.0",
     "@vitest/expect": "2.1.3",
     "ajv": "6.12.3",
