fix(nestjs): install builder in cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,6 +47,7 @@
     "@vercel/hono": "0.2.14",
     "@vercel/hydrogen": "1.3.2",
     "@vercel/next": "4.15.6",
+    "@vercel/nestjs": "workspace:*",
     "@vercel/node": "5.5.13",
     "@vercel/python": "6.1.0",
     "@vercel/redwood": "2.4.4",
