--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,8 @@ jobs:
       dplUrl: ${{ steps.waitForTarball.outputs.url }}
       affectedPackages: ${{ steps['affected-packages'].outputs['packages'] }}
       testStrategy: ${{ steps['affected-packages'].outputs['strategy'] }}
+      affectedCount: ${{ steps['affected-packages'].outputs['count'] }}
+      totalCount: ${{ steps['affected-packages'].outputs['total'] }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -42,8 +44,10 @@ jobs:
           # Get affected packages info for PR comment
           AFFECTED_OUTPUT=$(node utils/test-affected.js "${{ github.event.pull_request.base.sha }}" 2>&1)
 
-          # Extract affected packages count and strategy
+          # Extract affected packages count and total packages count
           PACKAGE_COUNT=$(echo "$AFFECTED_OUTPUT" | grep -o "Found [0-9]* affected packages" | grep -o "[0-9]*" || echo "0")
+          TOTAL_COUNT=$(echo "$AFFECTED_OUTPUT" | grep -o "Total packages with tests: [0-9]*" | grep -o "[0-9]*" || echo "0")
+
           if echo "$AFFECTED_OUTPUT" | grep -q "config or workflow changes detected"; then
             STRATEGY="all-e2e"
           elif [ "$PACKAGE_COUNT" -gt "0" ]; then
@@ -58,6 +62,7 @@ jobs:
           echo "strategy=$STRATEGY" >> $GITHUB_OUTPUT
           echo "packages=$PACKAGES" >> $GITHUB_OUTPUT
           echo "count=$PACKAGE_COUNT" >> $GITHUB_OUTPUT
+          echo "total=$TOTAL_COUNT" >> $GITHUB_OUTPUT
       - id: set-tests
         run: |
           # Set base SHA for affected package detection
@@ -87,9 +92,14 @@ jobs:
           script: |
             const strategy = '${{ needs.setup.outputs.testStrategy }}';
             const packages = '${{ needs.setup.outputs.affectedPackages }}';
-            const packageCount = packages ? packages.split(',').length : 0;
+            const affectedCount = parseInt('${{ needs.setup.outputs.affectedCount }}') || 0;
+            const totalCount = parseInt('${{ needs.setup.outputs.totalCount }}') || 0;
             const baseSha = '${{ github.event.pull_request.base.sha }}';
             const headSha = '${{ github.event.pull_request.head.sha }}';
+
+            // Calculate percentage
+            const percentage = totalCount > 0 ? Math.round((affectedCount / totalCount) * 100) : 0;
+            const isAll = percentage === 100 || strategy === 'all-e2e';
 
             let message = '## 🧪 Test Strategy\n\n';
             message += `**Comparing**: [\`${baseSha.substring(0, 7)}\`](https://github.com/${context.repo.owner}/${context.repo.repo}/commit/${baseSha}) → [\`${headSha.substring(0, 7)}\`](https://github.com/${context.repo.owner}/${context.repo.repo}/commit/${headSha}) ([view diff](https://github.com/${context.repo.owner}/${context.repo.repo}/compare/${baseSha}...${headSha}))\n\n`;
@@ -97,16 +107,16 @@ jobs:
             if (strategy === 'all-e2e') {
               message += '**Strategy**: Infrastructure changes detected - running ALL tests\n\n';
               message += '⚠️ Infrastructure or core utility changes were detected, so we\'re running the full test suite to ensure integration between packages is properly tested.\n\n';
-              message += `**Affected packages** (${packageCount}): All packages will be tested\n\n`;
+              message += `**Affected packages - ${affectedCount} (all)**:\n\n`;
               if (packages) {
                 const packageList = packages.split(',').map(p => `1. \`${p.trim()}\``).join('\n');
-                message += `Includes:\n${packageList}\n\n`;
+                message += `${packageList}\n\n`;
               }
               message += '**E2E Tests**: All e2e tests will run';
             } else if (strategy === 'affected-only') {
               message += '**Strategy**: Affected packages only\n\n';
               message += '✅ Only testing packages that have been modified or depend on modified packages. This saves time while maintaining safety.\n\n';
-              message += `**Affected packages** (${packageCount}):\n`;
+              message += `**Affected packages - ${affectedCount} (${percentage}%)**:\n\n`;
               if (packages) {
                 const packageList = packages.split(',').map(p => `1. \`${p.trim()}\``).join('\n');
                 message += packageList + '\n\n';
@@ -119,6 +129,7 @@ jobs:
             } else {
               message += '**Strategy**: Full test suite\n\n';
               message += '🔄 Running all tests\n\n';
+              message += `**Affected packages - ${affectedCount} (all)**\n\n`;
               message += '**E2E Tests**: All e2e tests will run';
             }
 
